# CMakeScratch

./: .gitignore  README.md
simple/: CMakeLists.txt  CMakePresets.json  script.cmake
structure/: CMakeLists.txt
structure/src/: CMakeLists.txt
structure/src/app1/: CMakeLists.txt  app1.c
structure/src/app1/lib3/: CMakeLists.txt  lib3.c  lib3.h
structure/src/lib1/: CMakeLists.txt  lib1.c  lib1.h
structure/src/lib2/: CMakeLists.txt  lib2.c  lib2.h
